update arrrow core

--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,9 @@
 <div>
+ 	<h3>ArrowPress Core 2.0.1</h3>
+	<div class="update">Added</div>
+	<ul>
+		<li>Update Library for elementor</li>
+		<li>Fixed some PHP Warning</li>
+	</ul>
 	<h3>ArrowPress Core 2.0.0 </h3>
-
 </div>
