update version arrowpress-core

--- a/changelog.html
+++ b/changelog.html
@@ -1,5 +1,23 @@
 <div>
- 	<h3>ArrowPress Core 2.0.1</h3>
+	<h3>ArrowPress Core 2.0.5</h3>
+	<div class="fixed">Fixed</div>
+	<ul>
+		<li>Import template kit of elementor</li>
+	</ul>
+
+	<h3>ArrowPress Core 2.0.4</h3>
+	<div class="fixed">Fixed</div>
+	<ul>
+		<li>Fixed Activate your theme license</li>
+	</ul>
+
+	<h3>ArrowPress Core 2.0.3</h3>
+	<div class="fixed">Fixed</div>
+	<ul>
+		<li>Fixed update theme</li>
+	</ul>
+
+	<h3>ArrowPress Core 2.0.1</h3>
 	<div class="update">Added</div>
 	<ul>
 		<li>Update Library for elementor</li>
