Fixed layout customizer with WordPress 6.7

--- a/changelog.html
+++ b/changelog.html
@@ -1,8 +1,26 @@
 <div>
-	<h3>ArrowPress Core 2.0.5</h3>
+	<h3>ArrowPress Core 2.1.0</h3>
 	<div class="fixed">Fixed</div>
 	<ul>
-		<li>Import template kit of elementor</li>
+		<li>Fixed layout customizer with WordPress 6.7</li>
+	</ul>
+
+	<h3>ArrowPress Core 2.0.8</h3>
+	<div class="fixed">Fixed</div>
+	<ul>
+		<li>Fixed import attribute of woocommerce</li>
+	</ul>
+
+	<h3>ArrowPress Core 2.0.7</h3>
+	<div class="fixed">Fixed</div>
+	<ul>
+		<li>Fixed style with WordPress 6.5</li>
+	</ul>
+
+	<h3>ArrowPress Core 2.0.6</h3>
+	<div class="fixed">Fixed</div>
+	<ul>
+		<li>Fixed save meta box not working</li>
 	</ul>
 
 	<h3>ArrowPress Core 2.0.4</h3>
