--- a/static/changelog.html
+++ b/static/changelog.html
@@ -1,9 +1,45 @@
 <div>
-    <h3>ArrowPress Core 2.0</h3>
-    <div class="features">New features</div>
-
+    <h3>ArrowPress Core 2.1.0</h3>
+    <div class="fixed">Fixed</div>
     <ul>
-        <li>Added </li>
+        <li>Fixed layout customizer with WordPress 6.7</li>
     </ul>
 
+    <h3>ArrowPress Core 2.0.8</h3>
+    <div class="fixed">Fixed</div>
+    <ul>
+        <li>Fixed import attribute of woocommerce</li>
+    </ul>
+
+    <h3>ArrowPress Core 2.0.7</h3>
+    <div class="fixed">Fixed</div>
+    <ul>
+        <li>Fixed style with WordPress 6.5</li>
+    </ul>
+
+    <h3>ArrowPress Core 2.0.6</h3>
+    <div class="fixed">Fixed</div>
+    <ul>
+        <li>Fixed save meta box not working</li>
+    </ul>
+
+    <h3>ArrowPress Core 2.0.4</h3>
+    <div class="fixed">Fixed</div>
+    <ul>
+        <li>Fixed Activate your theme license</li>
+    </ul>
+
+    <h3>ArrowPress Core 2.0.3</h3>
+    <div class="fixed">Fixed</div>
+    <ul>
+        <li>Fixed update theme</li>
+    </ul>
+
+    <h3>ArrowPress Core 2.0.1</h3>
+    <div class="update">Added</div>
+    <ul>
+        <li>Update Library for elementor</li>
+        <li>Fixed some PHP Warning</li>
+    </ul>
+    <h3>ArrowPress Core 2.0.0 </h3>
 </div>
