Fix Notice: Function _load_textdomain_just_in_time in WP 6.7

--- a/changelog.html
+++ b/changelog.html
@@ -1,4 +1,9 @@
 <div>
+	<h3>ArrowPress Core 2.1.1</h3>
+	<div class="update">Fixed</div>
+	<ul>
+		<li>Notice: Function _load_textdomain_just_in_time in WP 6.7</li>
+	</ul>
 	<h3>ArrowPress Core 2.1.0</h3>
 	<div class="fixed">Fixed</div>
 	<ul>
